# Concierge-SaaS

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  README.md  concierge.md  docker-compose.dev.yml  docker-compose.yml  eval_thresholds.yaml  model_card.md
admin/: app.py  (+3 more)
api/: Dockerfile  alembic.ini  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_baseline.py  002_messages_is_deleted.py  003_force_rls.py
api/app/: guardrails_client.py  redaction.py
api/app/agent/: agent.py  memory.py  router.py
api/app/core/: config.py  database.py  embedder.py  llm.py  modelserver_client.py  security.py  session.py  tracing.py
api/app/middleware/: rate_limit.py
api/app/models/: __init__.py  audit_log.py  cms_content.py  conversation.py  embedding.py  lead.py  message.py  tenant.py  user.py  widget.py
api/app/rag/: chunker.py  embedder.py  ingester.py  retrieval_guardrails.py  retriever.py
api/app/repositories/: base.py  cms_repo.py  conversation_repo.py  embedding_repo.py  lead_repo.py  tenant_repo.py
api/app/services/: auth_service.py  cms_service.py  cost_service.py  erasure_service.py  tenant_service.py
api/prompts/: capture_lead.md  escalate.md  rag_answer.md  system.md
api/scripts/: dev_setup.py
api/seeds/: lawson_partners.py  marios_pizza.py
api/tests/evals/: test_classifier.py  test_redaction.py
api/tests/integration/: test_rag_isolation.py  test_rls_reset.py  test_widget_token.py
api/tests/red_team/: probes.yaml  test_probes.py
api/tests/unit/: test_cms_repo_isolation.py  test_cors_headers.py  test_guardrails_client.py  test_redaction.py  test_retrieval_guardrails.py  test_security_tenant_id_body.py
guardrails/: Dockerfile  pyproject.toml
guardrails/app/: config.py  constants.py  main.py  nemo_runtime.py  schemas.py  security.py
guardrails/config/: config.yml
guardrails/tests/: test_main.py
(+87 files in other folders)
