[project]
name = "concierge-api"
version = "0.1.0"
description = "Concierge multi-tenant AI SaaS — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy==2.*",
    "alembic>=1.13",
    "fastapi-users[sqlalchemy]>=14",
    "pyjwt>=2.9",
    "anthropic>=0.30",
    "voyageai>=0.3",
    "redis>=5.0",
    "minio>=7.2",
    "hvac>=2.3",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "pydantic-settings>=2.0",
    "prometheus-client>=0.20",
    "python-multipart>=0.0.9",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-redis>=0.45b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "anyio>=4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "anyio>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
