[project]
name = "concierge-guardrails"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "nemoguardrails>=0.10",
    "langchain>=1.0",
    "langchain-anthropic>=1.0",
    "langchain-community>=0.4",
    "pyjwt>=2.9",
    "httpx>=0.27",
    "pydantic>=2.8",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
]
